# learnova

Project 1 Exploratory Data Analysis (EDA) on Retail Sales Data/: EDA.ipynb  README.md
Project 2 Housing Price Predition using LR/: .gitignore  README.md  pyproject.toml  requirements.txt
Project 2 Housing Price Predition using LR/house-price-prediction-main/: pyproject.toml
Project 2 Housing Price Predition using LR/house-price-prediction-main/notebooks/: Feature_Enginnering.ipynb
Project 2 Housing Price Predition using LR/notebooks/: EDA.ipynb  Feature_Enginnering.ipynb
