[project]
name = "house-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "feature-engine>=1.6.0",
    "fsspec>=2023.0.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "seaborn>=0.13.0",
    "statsmodels>=0.14.0",
]